--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Render React Component From Online UMD script",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
