--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@types/react": "^17.0.37",
     "typescript": "^4.5.3"
   },
-  "dependencies": {
-    "dynamic-umd-loader": "^1.1.2",
+  "peerDependencies": {
     "react": "^17.0.2"
+  },
+  "dependencies": {
+    "dynamic-umd-loader": "^1.1.2"
   }
 }
